--- a/f_play-cook.html
+++ b/f_play-cook.html
@@ -110,7 +110,7 @@
 
     <div class="hero__image">
 <!--      <img class="lazy" data-src="/images/banner.v5.jpg" alt="">-->
-      <img class="lazy" data-src="/images/banner.v1.jpg" alt="">
+      <img class="lazy" data-src="/images/banner/banner.v1.jpg" alt="">
     </div>
 
     <div class="hero__inner">
