--- a/g_p-c.html
+++ b/g_p-c.html
@@ -110,7 +110,7 @@
 
     <div class="hero__image">
 <!--      <img class="lazy" data-src="/images/banner.v5.jpg" alt="">-->
-      <img class="lazy" data-src="/images/banner.v1.jpg" alt="">
+      <img class="lazy" data-src="/images/banner/banner.v1.jpg" alt="">
     </div>
 
     <div class="hero__inner">
@@ -721,15 +721,8 @@
   </div>
 </div>
 
-<script src="https://unpkg.com/@icraft/player@latest/dist/umd/icraft-player.min.js"></script>
-
-
-const ICraftPlayer = window.ICraftPlayer
-
-const player = new ICraftPlayer({
-  src: 'https://icraft.gantcloud.com/api/static/templates/ArgoCD.icraft',
-  container: document.getElementById('container'),
-});
+  <iframe src= "https://rili.wps.cn/c/g_b5W1aSEZ" style= "border:none;" width="100%" height="600" overflow="hidden">
+  </iframe>
     </main> 
     <!-- end content -->
     
